sfSandBoxCode/force-app/main/default/objects/Fresh_Fit_Followup__c/Fresh_Fit_Followup__c.object-meta.xml
<CustomObject>
    <label>Fresh Fit Followup</label>
    <nameField>
        <label>Fresh Fit Followup Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fresh Fit Followups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>