sfSandBoxCode/force-app/main/default/objects/Fresh_Fit_Followup__c/fields/Followup_date__c.field-meta.xml
<CustomField>
    <fullName>Followup_date__c</fullName>
    <label>Followup date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>