sfSandBoxCode/force-app/main/default/objects/Fresh_Fit_Followup__c/fields/Household_Location__c.field-meta.xml
<CustomField>
    <fullName>Household_Location__c</fullName>
    <label>Household Location</label>
    <length>20</length>
    <type>Text</type>
</CustomField>