sfSandBoxCode/force-app/main/default/objects/Fresh_Fit_Followup__c/fields/Lead_Name__c.field-meta.xml
<CustomField>
    <fullName>Lead_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead Name</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Fresh Fit Followups</relationshipLabel>
    <relationshipName>Fresh_Fit_Followups</relationshipName>
    <type>Lookup</type>
</CustomField>