sfSandBoxCode/force-app/main/default/objects/Fresh_Fit_Followup__c/fields/Minutes_to_open_Toilet__c.field-meta.xml
<CustomField>
    <fullName>Minutes_to_open_Toilet__c</fullName>
    <label>Minutes to open Toilet</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>