sfSandBoxCode/force-app/main/default/objects/Fresh_Fit_Followup__c/fields/Monthly_Income__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Income__c</fullName>
    <label>Monthly Income</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>