sfSandBoxCode/force-app/main/default/objects/Fresh_Fit_Followup__c/fields/MPESA_Account__c.field-meta.xml
<CustomField>
    <fullName>MPESA_Account__c</fullName>
    <label>MPESA Account</label>
    <length>20</length>
    <type>Text</type>
</CustomField>