sfSandBoxCode/force-app/main/default/objects/Fresh_Fit_Followup__c/fields/MPESA_Code__c.field-meta.xml
<CustomField>
    <fullName>MPESA_Code__c</fullName>
    <label>MPESA Code</label>
    <length>15</length>
    <type>Text</type>
</CustomField>