sfSandBoxCode/force-app/main/default/objects/Fresh_Fit_Followup__c/fields/Number_of_Adults_in_Household_if_Deposit__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Adults_in_Household_if_Deposit__c</fullName>
    <label>Number of Adults in Household-if Deposit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>