sfSandBoxCode/force-app/main/default/objects/Fresh_Fit_Followup__c/fields/Number_of_Children_if_No__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Children_if_No__c</fullName>
    <label>Number of Children - if No</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>