sfSandBoxCode/force-app/main/default/objects/Fresh_Fit_Followup__c/fields/Official_Name__c.field-meta.xml
<CustomField>
    <fullName>Official_Name__c</fullName>
    <label>Official Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>