sfSandBoxCode/force-app/main/default/objects/Fresh_Fit_Followup__c/fields/Outcome__c.field-meta.xml
<CustomField>
    <fullName>Outcome__c</fullName>
    <label>Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Follow up</fullName>
            </value>
            <value>
                <fullName>Deposit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>