sfSandBoxCode/force-app/main/default/objects/Fresh_Fit_Followup__c/fields/Reason_for_Not_buying__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Not_buying__c</fullName>
    <label>Reason for Not buying</label>
    <type>TextArea</type>
</CustomField>