sfSandBoxCode/force-app/main/default/objects/Fresh_Fit_Followup__c/fields/Toilet_in_Plot__c.field-meta.xml
<CustomField>
    <fullName>Toilet_in_Plot__c</fullName>
    <label>Toilet in Plot</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>