sfSandBoxCode/force-app/main/default/objects/Fresh_Fit_Followup__c/fields/Toilet_Type__c.field-meta.xml
<CustomField>
    <fullName>Toilet_Type__c</fullName>
    <label>Toilet Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FLT</fullName>
            </value>
            <value>
                <fullName>Pit Latrine</fullName>
            </value>
            <value>
                <fullName>Pour Flush</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>