sfSandBoxCode/force-app/main/default/objects/Fresh_Fit_Followup__c/fields/Type_of_Toilet_Open_at_Night__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Toilet_Open_at_Night__c</fullName>
    <label>Type of Toilet Open at Night</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FLT</fullName>
            </value>
            <value>
                <fullName>Pit Latrine</fullName>
            </value>
            <value>
                <fullName>Pour Flush</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>