sfSandBoxCode/force-app/main/default/objects/Fresh_Fit_Followup__c/recordTypes/Fresh_Fit_Followup.recordType-meta.xml
<RecordType>
    <fullName>Fresh_Fit_Followup</fullName>
    <active>true</active>
    <label>Fresh Fit Followup</label>
</RecordType>